# cuneus

./: .gitignore  BUILD.md  Cargo.toml  INSTALL.md  README.md  build.rs  usage.md
.github/workflows/: release.yaml
.zed/: settings.json
examples/: 2dneuron.rs  audiovis.rs  blockgame.rs  buddhabrot.rs  circuits.rs  cliffordcompute.rs  cnn.rs  computecolors.rs  cuneus.rs  currents.rs  debugscreen.rs  fft.rs  fluid.rs  gabor.rs  galaxy.rs  gaussian.rs  jfa.rs  kuwahara.rs  lego.rs  lich.rs  lorenz.rs  mandelbulb.rs  matrix.rs  nebula.rs  orbits.rs  particles.rs  pathtracing.rs  plasma.rs  rorschach.rs  scenecolor.rs  sdvert.rs  sinh.rs  spiralchaos.rs  synth.rs  system.rs  tree.rs  tui_browser.rs  veridisquo.rs  volumepassage.rs  voronoi.rs  (+1 more)
examples/shaders/: audiovis.wgsl  blit.wgsl  blockgame.wgsl  circuits.wgsl  cliffordcompute.wgsl  cnn.wgsl  computecolors.wgsl  currents.wgsl  debugscreen.wgsl  fft.wgsl  galaxy.wgsl  gaussian.wgsl  jfa.wgsl  kuwahara.wgsl  lego.wgsl  mandelbulb.wgsl  nebula.wgsl  orbits.wgsl  scenecolor.wgsl  sdvert.wgsl  spiralchaos.wgsl  synth.wgsl  system.wgsl  veridisquo.wgsl  voronoi.wgsl  vortex.wgsl
shaders/: 2dneuron.wgsl  asahi.wgsl  attractor.wgsl  audiovis.wgsl  blockgame.wgsl  buddhabrot.wgsl  circuits.wgsl  clifford.wgsl  clifford_compute.wgsl  cliffordcompute.wgsl  cnn.wgsl  compute_basic.wgsl  computecolors.wgsl  cuneus.wgsl  currents.wgsl  debugscreen.wgsl  dna.wgsl  droste.wgsl  feedback.wgsl  fft.wgsl  fluid.wgsl  gabor.wgsl  gabornoise.wgsl  galaxy.wgsl  genuary2025_18.wgsl  genuary2025_6.wgsl  hilbert.wgsl  jfa.wgsl  lich.wgsl  lorenz.wgsl  mandelbrot.wgsl  mandelbulb.wgsl  matrix.wgsl  nebula.wgsl  orbits.wgsl  particles.wgsl  pathtracing.wgsl  plasma.wgsl  poe2.wgsl  quadraticbulb.wgsl  (+17 more)
src/: app.rs  atomic.rs  base_shader.rs  controls.rs  export.rs  feedback.rs  font.rs  fps.rs  hdri.rs  hot.rs  keyinputs.rs  lib.rs  mouse.rs  renderer.rs  renderkit.rs  shader.rs  sound.rs  spectrum.rs  synthesis.rs  texture.rs  uniforms.rs
src/compute/: builder.rs  core.rs  mod.rs  multipass.rs  resource.rs
src/file_log/: mod.rs
src/gst/: audio.rs  mod.rs  synthesis.rs  video.rs  webcam.rs
