[package]
name = "cuneus"
version = "0.1.6"
edition = "2021"
authors = ["altunenes"]
description = "A WGPU-based shader development tool"
license = "MIT"
repository = "https://github.com/altunenes/cuneus"
readme = "readme.md"
keywords = ["graphics", "wgpu", "shaders", "gpu"]
categories = ["graphics", "rendering"]

[dependencies]
wgpu = "24.0.1"
winit = "0.30.7"
bytemuck = { version = "1.21", features = ["derive"] }
egui-wgpu = "0.31.0"
egui = "0.31.0"
egui-winit = "0.31.0"
image = { version = "0.25.5", features = ["png"] }
env_logger = "0.11.6"
pollster = "0.4.0"
rfd = "0.15.1"
notify = "7.0.0"
gstreamer = "0.23.4"
gstreamer-video = "0.23.4"
gstreamer-app = "0.23.4"
gstreamer-pbutils = "0.23.4"
anyhow = "1.0.96"
log = "0.4.25"

[dev-dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
