[package]
name = "cuneus"
version = "0.2.5"
edition = "2021"
authors = ["altunenes"]
description = "A WGPU-based shader development tool"
license = "MIT"
repository = "https://github.com/altunenes/cuneus"
readme = "readme.md"
keywords = ["graphics", "wgpu", "shaders", "gpu"]
categories = ["graphics", "rendering"]

[dependencies]
wgpu = "25.0.0"
winit = "0.30.11"
bytemuck = { version = "1.21", features = ["derive"] }
egui-wgpu = "0.32.0"
egui = "0.32.0"
egui-winit = "0.32.0"
image = { version = "0.25.6", features = ["png", "hdr","exr"] }
env_logger = "0.11.6"
pollster = "0.4.0"
rfd = "0.15.1"
notify = "7.0.0"
gstreamer = { version = "0.23.7", optional = true }
gstreamer-video = { version = "0.23.6", optional = true }
gstreamer-app = { version = "0.23.5", optional = true }
gstreamer-pbutils = { version = "0.23.5", optional = true }
anyhow = "1.0.96"
log = "0.4.25"
fontdue = "0.9.0"

[features]
default = ["media"]
media = ["gstreamer", "gstreamer-video", "gstreamer-app", "gstreamer-pbutils"]

[dev-dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"